# Stoffel-Lang

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: ffi_example.c
src/: ast.rs  binary_converter.rs  bytecode.rs  codegen.rs  compiler.rs  core_types.rs  errors.rs  ffi.rs  lexer.rs  lib.rs  main.rs  module_resolver.rs  multi_file_compiler.rs  optimizations.rs  parser.rs  register_allocator.rs  semantic.rs  suggestions.rs  symbol_table.rs  ufcs.rs  ufcs_tests.rs
tests/: client_store_invalid.stfl  client_store_valid.stfl  compiler_phase_tests.rs  error_indentation.stoffel  error_integer_ranges.stfl  error_integer_ranges.stoffel  error_secret_comparison_in_if.stfl  error_secret_comparison_in_if.stoffel  error_syntax.stoffel  factorial.stfl  factorial.stflb  factorial.stoffel  fibonacci.stfl  fibonacci.stflb  fibonacci.stoffel  fibonacci_recursive.stfl  fibonacci_recursive.stoffel  fizzbuzz.stfl  fizzbuzz.stflb  fizzbuzz.stoffel  import_integration_tests.rs  knapsack_greedy.stfl  knapsack_invalid.stfl  matrix_average_fixed_point.stfl  object_syntax_tests.rs  secret_usage_invalid.stfl  secret_usage_invalid.stoffel  secret_usage_valid.stfl  secret_usage_valid.stoffel  suggestion_integration_tests.rs  valid_basics.stfl  valid_basics.stoffel  valid_for_loop.stfl  valid_for_loop.stoffel  valid_indentation.stoffel  valid_nim_functions.stfl  valid_nim_functions.stoffel  valid_public_comparison_minimal.stfl  valid_public_comparison_minimal.stoffel  valid_public_comparisons.stoffel  (+4 more)
tests/bytecode/: matrix_average_fixed_point.stflb
(+27 files in other folders)
