[package]
name = "stoffellang"
description = "The compiler for Stoffel Lang, ideally a simple compiler with optimizations for Stoffel VM."
authors = ["Gabriel Arrouye"]
version = "0.1.0"
edition = "2021"

[lib]
name = "stoffellang"
crate-type = ["cdylib", "rlib"]

[dependencies]
stoffel-vm-types = { version = "0.1.0", git = "https://github.com/Stoffel-Labs/StoffelVM.git", branch = "runner" }
colored = "3.0.0"
edit-distance = "2.1.0"
clap = { version = "4.5.4", features = ["derive"] }